# awrs-colm-2025

./: README.md  pyproject.toml
.github/workflows/: pytest.yml
data/pattern_matching/: patterns.csv
experiments/: __main__.py  json_utils.py  methods.py  sampler.py  tasks.py
scripts/: README.md  json.sh  molecular_synthesis.sh  pattern_matching.sh  summarize_results.py  text_to_sql.sh
tests/: conftest.py  test_cli.py  test_combinations.py
