[build-system]
requires = ["setuptools>=64.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "awrs-colm-2025"
dynamic = ["version"]
description = "Fast Controlled Generation from Language Models with Adaptive Weighted Rejection Sampling (COLM 2025)"
readme = "README.md"
requires-python = ">=3.11"
authors = []
dependencies = [
    "genlm-eval[spider,molecules,pattern_matching,json_schema_bench] @ git+https://github.com/genlm/genlm-eval.git",
    "genlm-control==0.2.11",
    "llamppl @ git+https://github.com/genlm/llamppl.git@improve-resampling",
    "click",
    "pytest",
    "pytest-asyncio",
    "plotnine",
    "json_stream",
    "jsonschema",
    "datasets"
]

[tool.setuptools.packages.find]
include = ["experiments", "experiments/*"]
